# ecl3

./: .travis.yml  CMakeLists.txt  appveyor.yml  config.sh
.circleci/: config.yml
lib/: CMakeLists.txt
lib/include/ecl3/: common.h  keyword.h  summary.h
lib/src/: keyword.cpp  summary.cpp
lib/tests/: keyword.cpp
python/: CMakeLists.txt  requirements-dev.txt  setup-CMakeLists.txt  setup.py
python/ecl3/: __init__.py  core.cpp
python/ecl3/summary/: specification.py
python/ecl3/tests/: __init__.py  test_smspec.py  test_specification.py
